# pyton1

./: main.py  pyproject.toml  widget.py
package-name/: README.md  pyproject.toml
src/: widget.py
